# esilv_bot

./: .env  .env.template  .gitignore  Cargo.toml  README.md  build_linux.bat  config.json  docker-compose.yml  table
.github/workflows/: ReleaseCI.yml  dev.yml  publish.yml
leo_auth/: Cargo.toml
leo_auth/src/: lib.rs
leo_bot/: Cargo.toml  Dockerfile
leo_bot/src/: config-dev.json  config.json  events.rs  main.rs  models.rs
leo_bot/src/actions/: action.rs  mod.rs  office.rs  subject.rs
leo_bot/src/commands/: owner.rs
leo_bot/src/models/: config.rs  mod.rs
leo_bot/src/utils/: mod.rs  offices.rs  room.rs  subject.rs
leo_shared/: Cargo.toml
leo_shared/src/: lib.rs
leo_shared/src/room/: mod.rs
leo_shared/src/user/: mod.rs
leo_website/: Cargo.toml  Dockerfile
leo_website/backend/: Cargo.toml  build.rs
leo_website/backend/src/: main.rs  models.rs
leo_website/backend/src/oauth/: adfs.rs  discord.rs  mod.rs
leo_website/frontend/: package-lock.json  package.json
leo_website/frontend/src/: App.js  GlobalStyle.js
leo_website/src/: main.rs
leo_website/src/adfs/: mod.rs
leo_website/src/assets/: style.css
leo_website/src/client/: mod.rs
leo_website/src/discord/: mod.rs
shared_lib/: Cargo.toml
shared_lib/src/socket/: client.rs  codec.rs  message.rs  mod.rs  server.rs  session.rs
static/: style.css
templates/: base.html  default.html  index.html
