[package]
name = "leo_auth"
version = "0.1.0"
authors = ["Aursen <jeanno11@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
regex = "1.4.3"
leo_shared = {path = "../leo_shared"}
form_urlencoded = "1.0.0"