[package]
name = "leo_bot"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
dotenv = "0.15.0"
serde_json = "1.0"
serde = "1.0"
async-trait = "0.1.51"
futures = "0.3.17"
shared_lib = { path= "../shared_lib" }

[dependencies.serenity]
default-features = false
version = "0.10"
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]