[package]
name = "leo_shared"
version = "0.1.0"
authors = ["Aursen <jeanno11@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
serde = { version = "1.0", features = ["derive"] }
bson = "1.1.0"