[package]
name = "leo_website"
version = "0.2.0"
authors = ["Aursen <jeanno11@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="3", features=["rustls"] }
tera = "1.6"
actix-files = "0.5"
env_logger = "0.8"
dotenv = "0.15"
serde = "1"
form_urlencoded = "1.0.1"
serde_json = "1"
actix-session = "0.4.0"
leo_shared = {path = "../leo_shared"}
leo_auth = {path = "../leo_auth"}
regex = "1.4.3"
tokio = { version = "1", features = ["full"] }