[package]
name = "backend"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.12"
actix-files = "0.6.0-beta.9"
actix-session = "0.5.0-beta.4"
awc = "3.0.0-beta.11"
env_logger = "0.9.0"
dotenv = "0.15"
serde_json = "1.0"
serde = "1.0"
form_urlencoded = "1.0.1"
voca_rs = "1.14.0"
rbatis =  { version = "3.0" }
bson = "2.0.1"
log = "0.4"
fast_log="1.3"
base64 = "0.13.0"
shared_lib = { path = "../../shared_lib/" }
tokio = "1.14"
thiserror = "1.0"